refactor(cleanup): re-export types from core and remove duplicate dependencies
Phase 3: Cleanup

- Re-export HtmlValidateMessage type from core
  - Update CLI formatters to use core types instead of direct imports
  - No more direct html-validate imports in CLI

- Remove duplicate dependencies from packages
  - CLI: Remove html-validate, linkedom, prettier (now in core or workspace root)
  - TUI: Remove html-validate (now in core)
  - Reduces duplication and enforces single source of truth

All third-party validation library types now accessed through @webspecs/core.
Dependencies properly organized with core owning validation tools.

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -45,11 +45,8 @@
     "commander": "^14.0.2",
     "diff": "^8.0.3",
     "emphasize": "^7.0.0",
-    "html-validate": "^10.7.0",
-    "linkedom": "^0.18.12",
     "marked": "^15.0.12",
-    "marked-terminal": "^7.3.0",
-    "prettier": "^3.8.1"
+    "marked-terminal": "^7.3.0"
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.11.0",
