fix(deps): correct runtime and peer dependencies after refactoring
- Remove playwright dependencies from CLI (now handled by core)
  - Removed @axe-core/playwright and playwright from devDependencies
  - Removed peerDependencies and peerDependenciesMeta sections
  - CLI calls core's validateAccessibility instead of using playwright directly

- Remove prettier from core dependencies
  - prettier is a dev/formatting tool, not runtime dependency for core

- Add prettier back to CLI dependencies
  - fetch command uses prettier at runtime for HTML formatting
  - This is presentation layer formatting, similar to diff usage

Dependencies now correctly reflect package responsibilities:
- Core: owns validation tools and business logic dependencies
- CLI: owns presentation tools (prettier, diff, commander, marked)

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -46,24 +46,11 @@
     "diff": "^8.0.3",
     "emphasize": "^7.0.0",
     "marked": "^15.0.12",
-    "marked-terminal": "^7.3.0"
+    "marked-terminal": "^7.3.0",
+    "prettier": "^3.8.1"
   },
   "devDependencies": {
-    "@axe-core/playwright": "^4.11.0",
     "@types/diff": "^8.0.0",
-    "@types/marked-terminal": "^6.1.1",
-    "playwright": "^1.58.2"
-  },
-  "peerDependencies": {
-    "@axe-core/playwright": "^4.10.0",
-    "playwright": "^1.40.0"
-  },
-  "peerDependenciesMeta": {
-    "@axe-core/playwright": {
-      "optional": true
-    },
-    "playwright": {
-      "optional": true
-    }
+    "@types/marked-terminal": "^6.1.1"
   }
 }
